Cross browser fixes: - View source was broken in Safari because jquery.html() doesn't work on <svg>, which is an XML node.  The workaround is to put the <svg> element inside a <div> and call html() on that.  This entailed some layout changes to get it working in Firefox again. - IE9 was borking the site by putting it in quirks mode.  This was fixed by adding <!DOCTYPE html>.

--- a/style.css
+++ b/style.css
@@ -5,8 +5,16 @@ body {
 }
 
 #rendering {
-  height: 100%;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+}
+
+#rendering svg {
   width: 100%;
+  height: 100%;
 }
 
 .html-normal {
@@ -21,6 +29,7 @@ body {
   background-color: rgba(128, 128, 128, 0.5);
   padding: 10px;
   margin: 10px;
+  z-index: 100;
 }
 
 #src-box {
